# plugs

./: CMakeLists.txt  README.md
exe/helloworld/: CMakeLists.txt
exe/helloworld/src/: main.cpp
lib/: CMakeLists.txt
lib/aux/: CMakeLists.txt
lib/aux/include/: bytebuffer.h  processor.h  trie.h
lib/aux/src/: bytebuffer.cpp  processor.cpp  trie.cpp
lib/aux/test/: test_bytebuffer.cpp  test_trie.cpp
lib/cudaaux/: CMakeLists.txt
lib/cudaaux/include/: cudaaux.h  cudainline.h
lib/cudaaux/src/: cudaaux.cu
lib/mem/: CMakeLists.txt
lib/mem/include/: bytebuffer.h  cudamem.h  mem.h  memblocks.h
lib/mem/src/: bytebuffer.cpp  cudamem.cu  mem.cpp  memblocks.cpp
lib/nux/: CMakeLists.txt
lib/nux/include/: nuxcontext.h  nuxmemorymanager.h  nuxplugin.h  nuxpluginmanager.h
lib/nux/src/: nuxcontext.cpp  nuxmemorymanager.cpp  nuxplugin.cpp  nuxpluginmanager.cpp
lib/nux/test/: test_plugin.cpp
scripts/: cmake.sh  cmake_debug.sh  cmake_release.sh  colors.sh
